--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
         </header>
         <section class="page-content page-level">
           <section class="blog-preview">
-            <h4><strong>Blog</strong></h4>
-            <section class="list">
-
+            <h2><strong>Blog</strong></h4>
+            <section>
+              <div class="card">
+                <h4>Title</h4>
+                <p>Some text for the card</p>
+              </div>
+              <div class="card">
+                <h4>Title</h4>
+                <p>Some text for the card</p>
+              </div>
+              <div class="card">
+                <h4>Title</h4>
+                <p>Some text for the card</p>
+              </div>
             </section>
             <a href="#">See more...</a>
           </section>
